fixed news image not showing if null

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -127,8 +127,6 @@ body {
     }
     
     .admin_box {
-      text-align:center;
-      width: 120px;
       padding: 4px;
       color: green;
       background-color: #EBFFEB;
